# tracksync

./: .gitignore  LICENSE  PLAN_autocorrelation.md  README.md  pyproject.toml  timestamps.csv  tracksync.py  video_align.py
docs/: scene_alignment_design.md  scene_alignment_dtw_contrast.md  scene_alignment_dtw_contrast_experiments.md  scene_alignment_dtw_contrast_research.md  scene_alignment_tasks.md  scene_alignment_validation.md  windows_setup.md
experiments/results/: phase1.json  phase1_refine.json  phase2.json  phase3.json
scripts/: validate_scene_alignment.py
scripts/experiments/: exputil.py  extract_embeddings.py  extract_vlad.py  make_references.py  motion.py  sweep_phase1.py  sweep_phase1_refine.py  sweep_phase2.py  sweep_phase3.py
tests/: __init__.py  conftest.py  test_autocorrelation.py  test_cli_scene.py  test_csv_reader.py  test_csv_writer.py  test_dtw.py  test_embedding.py  test_embedding_dinov2.py  test_fine_align_geometry.py  test_fine_align_lightglue.py  test_frame_analysis.py  test_frame_sampling.py  test_integration.py  test_masking.py  test_models.py  test_relative_timer.py  test_scene_align_coarse.py  test_scene_imports.py  test_scene_sync_points.py  test_scene_visualization.py  test_segment_validator.py  test_speed_calculator.py  test_validation_synthetic.py  test_video_processor.py
tracksync/: __init__.py  autocorrelation.py  cli.py  cross_correlation.py  csv_reader.py  csv_writer.py  diagnostic_io.py  dtw.py  embedding.py  feature_extraction.py  fine_align.py  frame_data.py  masking.py  models.py  relative_timer.py  scene_align.py  scene_deps.py  segment_validator.py  speed_calculator.py  turn_analysis.py  video_processor.py  visualization.py
tracksync/proto/: __init__.py  diagnostic.proto  diagnostic_pb2.py
