[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracksync"
version = "2.0.0"
description = "Compare racing dashcam videos by syncing timestamps"
requires-python = ">=3.8"

dependencies = [
    "moviepy>=1.0.3",
    "opencv-python>=4.5.0",
    "protobuf>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
scene = [
    "torch>=2.1",
    "timm>=0.9",
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
    "scipy>=1.10",
]

[project.scripts]
tracksync = "tracksync.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracksync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short -m \"not slow\""
markers = [
    "slow: marks tests as slow (deselected by default)",
]

[tool.coverage.run]
source = ["tracksync"]
omit = ["tests/*"]
